# Recipe-Recommendation-AMD

./: AMD_Recipe_Recommender_Whitepaper.docx
Recipe-Recommender-AMD-GPU/amd-recipe-whitepaper/: .gitignore  README.md  generate_data.ts  metadata.json  package-lock.json  package.json  server.ts
Recipe-Recommender-AMD-GPU/amd-recipe-whitepaper/data/: recipes.csv
Recipe-Recommender-AMD-GPU/amd-recipe-whitepaper/gpu/: CMakeLists.txt  knn_kernel.hip
Recipe-Recommender-AMD-GPU/amd-recipe-whitepaper/notebooks/: amd_gpu_benchmark.ipynb
Recipe-Recommender-AMD-GPU/amd-recipe-whitepaper/src/: App.tsx  firebase.ts  index.css  types.ts
Recipe-Recommender-AMD-GPU/amd-recipe-whitepaper/src/components/: Auth.tsx
Recipe-Recommender-AMD-GPU/amd-recipe-whitepaper/whitepaper/: AMD_Recipe_Recommender_Whitepaper.docx
